Add handler to display reservation details of the user
